cambios en código e inicio dos subsecciones

--- a/biblio.bib
+++ b/biblio.bib
@@ -64,3 +64,61 @@
   year={1929},
   publisher={SAGE Publications Sage UK: London, England}
 }
+
+%Este explica como se obtiene el Cp, power coefficient de una pala.
+@book{manwell2010wind,
+  title={Wind energy explained: theory, design and application},
+  author={Manwell, James F and McGowan, Jon G and Rogers, Anthony L},
+  year={2010},
+  publisher={John Wiley \& Sons}
+}
+
+
+% Libro donde viene la fórmula del momento de inercia del trapecio
+@book{oberg2012machinery,
+  title={Machinery's Handbook},
+  author={Oberg, E. and Horton, H.L. and Industrial Press (Firm) and Jones, F.D. and McCauley, C.J. and Ryffel, H.H.},
+  isbn={9780831129026},
+  url={https://books.google.es/books?id=6cQ8lwEACAAJ},
+  year={2012},
+  publisher={Industrial Press, Incorporated}
+}
+
+%Libro de mecánica clásica del que puedo sacar info
+@book{goldstein1987mecanica,
+  title={Mec{\'a}nica cl{\'a}sica},
+  author={Goldstein, H.},
+  isbn={9788429143065},
+  url={https://books.google.es/books?id=vf2JiybeDc4C},
+  year={1987},
+  publisher={Revert{\'e}}
+}
+
+
+% Aquí viene la explicación del teorema de huygens-steiner según wikipedia, pero no encuentro el libro bueno
+@book{haas1928introduction,
+  title={Introduction to Theoretical Physics ...},
+  author={Haas, A.E. and Verschoyle, T.},
+  lccn={31018812},
+  series={Introduction to Theoretical Physics},
+  url={https://books.google.es/books?id=VavvAAAAMAAJ},
+  year={1928},
+  publisher={Van Nostrand}
+}
+
+%Aquí supuestamente también viene la explicación del teorema de huygens-steiner, sobre la página 589 explican de manera sencilla lo que es el torque y el momento de inercia
+@book{nelson2008penguin,
+  title={The Penguin Dictionary of Mathematics: Fourth edition},
+  author={Nelson, D.},
+  isbn={9780141920870},
+  series={Penguin reference library},
+  url={https://books.google.es/books?id=ud3sEeVdTIwC},
+  year={2008},
+  publisher={Penguin Books Limited}
+}
+
+% paper en el que quizás me puedo basar para el steiner theorem
+%https://www.ld-didactic.de/literatur/hb/e/p1/p1453_e.pdf
+
+%Libro del steiner theorem
+% http://blog.espol.edu.ec/janjmore/files/2013/11/Curso-de-fisica-teorica-Vol-1-Mecanica.pdf
