--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage[spanish]{babel} % Español 
 \usepackage[utf8]{inputenc} % Para poder poner tildes
 \usepackage{vmargin} % Para modificar los márgenes
+\newtheorem{Teorema}{Teorema} %Para generar teoremas
 \setmargins{2.5cm}{1.5cm}{16.5cm}{23.42cm}{10pt}{1cm}{0pt}{2cm}
 %margen izquierdo, superior, anchura del texto, altura del texto, altura de los encabezados, espacio entre el texto y los encabezados, altura del pie de página, espacio entre el texto y el pie de página
 \mdfdefinestyle{theoremstyle}{%
