08/06 Inercia acabado y omega a medias

--- a/biblio.bib
+++ b/biblio.bib
@@ -122,3 +122,71 @@
 
 %Libro del steiner theorem
 % http://blog.espol.edu.ec/janjmore/files/2013/11/Curso-de-fisica-teorica-Vol-1-Mecanica.pdf
+
+
+
+
+%En este artículo viene la densidad del GFRP
+%https://www.researchgate.net/publication/275713914_Mechanical_Properties_of_Glass_Fibre_Reinforced_Polymer_Based_on_Resin_from_Recycled_Plastic
+
+@article{Ephraim2015,
+author = {Ephraim, Maurice and Adebukola, Adetiloye},
+year = {2015},
+month = {01},
+pages = {145-152},
+title = {Mechanical Properties of Glass Fibre Reinforced Polymer Based on Resin from Recycled Plastic},
+volume = {6},
+journal = {International Journal of Scientific and Engineering Research}
+}
+
+%Este artículo tiene la densidad del CFRP
+% https://www.sciencedirect.com/topics/engineering/carbon-fibre-reinforced-polymer
+@incollection{MOHAMMED201969,
+title = {4 - The impact of graphene oxide on cementitious composites},
+editor = {Fernando Pacheco-Torgal and Maria Vittoria Diamanti and Ali Nazari and Claes Goran Granqvist and Alina Pruna and Serji Amirkhanian},
+booktitle = {Nanotechnology in Eco-efficient Construction (Second Edition)},
+publisher = {Woodhead Publishing},
+edition = {Second Edition},
+pages = {69-95},
+year = {2019},
+series = {Woodhead Publishing Series in Civil and Structural Engineering},
+isbn = {978-0-08-102641-0},
+doi = {https://doi.org/10.1016/B978-0-08-102641-0.00004-9},
+url = {https://www.sciencedirect.com/science/article/pii/B9780081026410000049},
+author = {Alyaa Mohammed and Jay G. Sanjayan and Ali Nazari and Nihad T.K. Al-Saadi}
+}
+
+%Artículo que tiene la densidad de la GF epoxy
+%https://www.researchgate.net/publication/256941412_Evaluation_of_Mechanical_Properties_of_Bagasse-Glass_Fiber_Reinforced_Composite
+@article{Tewari2011,
+author = {Tewari, Maneesh and Singh, Vinay and Gope, Prakash and Chaudhary, Arun},
+year = {2011},
+month = {09},
+pages = {},
+title = {Evaluation of Mechanical Properties of Bagasse-Glass Fiber Reinforced Composite},
+volume = {3},
+journal = {Journal of Materials and Environmental Science}
+}
+
+%En este artículo puede venir el tema de las hollow blades o que están huecas en tanto %
+%https://www.researchgate.net/publication/305783157_Hollow_Blades_for_Small_Wind_Turbines_Operating_at_High_Altitudes
+@article{Pourrajabian2016,
+author = {Pourrajabian Shahrbabak, Abolfazl and Afshar, Peyman and Mirzaei, Masoud and Reza, Ebrahimi and Wood, David},
+year = {2016},
+month = {08},
+pages = {},
+title = {Hollow Blades for Small Wind Turbines Operating at High Altitudes},
+volume = {138},
+journal = {Journal of Solar Energy Engineering},
+doi = {10.1115/1.4034333}
+}
+
+%Libro que explica qué es la velocidad angular
+@book{cummings2004understanding,
+  title={Understanding Physics, 1st Edition},
+  author={Cummings, K. and Laws, P.W. and Redish, E.F.},
+  isbn={9781118313299},
+  url={https://books.google.es/books?id=iRocAAAAQBAJ},
+  year={2004},
+  publisher={Recording for the Blind \& Dyslexic}
+}
