--- a/secciones/seccion1.tex
+++ b/secciones/seccion1.tex
@@ -648,17 +648,19 @@ Pero de algún modo lo que se pretende con las turbinas es que sus velocidades s
 
 Ahora que se tienen los conocimientos básicos sobre la velocidad angular y lo necesario para obtenerla, se puede pasar a la definición de los términos que se van a usar para su cálculo.\\
 
-Como se comenta en uno de los párrafos de esta sección, una de las partes fundamentales es el viento que se presenta delante de la turbina y su velocidad, es decir, la masa o flujo de aire que atravesará el disco imaginario que se establece con las dimensiones de la turbina del generador eólico.\\
+Como se comenta en uno de los párrafos de esta sección, una de las partes fundamentales es el viento que se presenta delante de la turbina y su velocidad, es decir, la masa o flujo de aire que atravesará el disco imaginario que se establece con las dimensiones de la turbina del generador eólico. Y al querer calcular una masa, en este caso del aire se obtendrá mediante la relación del volumen frente a la turbina y la densidad del mismo, esta puede variar dependiendo de las condiciones meteorológicas, pero se han obviado.\\
 
     \begin{definicion}
+    La masa de aire con la que trabaja el rotor completo se define de la siguiente forma:
     
     $$ diametro \text{ } rotor = 2L + diametro \text{ } gondola $$
     $$ volumen \text{ } rotor = \dfrac{\pi}{4} \cdot diametro \text{ } rotor^2 \cdot J_{left} $$
-     
-    Donde,
+    $$ Masa \text{ } aire = volumen \text{ } rotor \cdot \rho $$
+    Donde, blablabla
     \centering 
     \label{def:masa_aire}
     \end{definicion}
+
 
 
  \subsection{Rendimiento de las potencias}
