Arreglos después de mandar borrador 1

--- a/basicas/portada.tex
+++ b/basicas/portada.tex
@@ -24,7 +24,7 @@
 
 {\Large Energy generation with a floating offshore wind turbine}\vspace{5mm}
 
-{\Large Supervisor: Matilde Santos Peña}\vspace{20mm} 
+{\Large Supervisor: Matilde Santos Peñas}\vspace{20mm} 
 
 {\bfseries \LARGE José Antonio Fernández López}\vspace{5mm} 
 
