--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@ innertopmargin=\topskip,
 \include{basicas/resumen}
 \tableofcontents
 \include{basicas/introduccion}
-\include{secciones/seccion1}
+\include{secciones/desarrollo_teorico}
 
 
 
