--- a/basicas/introduccion.tex
+++ b/basicas/introduccion.tex
@@ -1,1 +1,19 @@
 \section{Introducción}
+
+\subsection{Motivación}
+
+Cuál es el problema que vas a tratar
+Utilidad del estudio
+Aplicación
+
+\subsection{Objetivos}
+El objetivo principal de este trabajo es...
+Los objetivos específicos son:
+\begin{itemize}
+    \item Estudiar la fuerza de torsión en la pala de un aerogenerador
+    \item Encontrar el modelo matemático de las fuerzas
+\end{itemize}
+
+\subsection{Estructura de la memoria}
+
+\subsection{Asignaturas relacionadas}
