Acabadas correciones matilde

--- a/biblio.bib
+++ b/biblio.bib
@@ -190,3 +190,26 @@ doi = {10.1115/1.4034333}
   year={2004},
   publisher={Recording for the Blind \& Dyslexic}
 }
+
+%Artículo que enseña como es una cross secction de una wind turbine blade básica
+@article{Zheng2014,
+author = {Zheng, Yuqiao and Zhao, Rongzhen and Liu, Hong},
+year = {2014},
+month = {07},
+pages = {1-5},
+title = {Optimization Method for Girder of Wind Turbine Blade},
+volume = {2014},
+journal = {Mathematical Problems in Engineering},
+doi = {10.1155/2014/898736}
+}
+
+
+% página web de donde saqué la definición del lift coefficient o coeficiente de sustentación https://www.grc.nasa.gov/www/k-12/airplane/liftco.html
+
+@MISC{Hall2021,
+author = {Hall, Nancy},
+title = {The lift coefficient},
+month = may,
+year = {2021},
+howpublished={\url{https://www.grc.nasa.gov/www/k-12/airplane/liftco.html}}
+}
