--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt, a4paper]{article} %tamaño mínimo de letra 11pto.
-
+\usepackage{url} %Para incluir páginas web como referencia
 \usepackage[dvipsnames]{xcolor} %Para colores raros que quiera usar.
 
 \usepackage{amsfonts} %Para poder poner letras bonitas de números naturales etc.
