Cambios pre-borrador 2

--- a/basicas/introduccion.tex
+++ b/basicas/introduccion.tex
@@ -2,16 +2,18 @@
 
 \subsection{Motivación}
 
-Cuál es el problema que vas a tratar
-Utilidad del estudio
-Aplicación
+Cuál es el problema que vas a tratar\\
+Utilidad del estudio\\
+Aplicación\\
 
 \subsection{Objetivos}
-El objetivo principal de este trabajo es...
+El objetivo principal de este trabajo es evaluar el efecto que produce la torsión de las palas de un aerogenerador en la potencia generada por estas.\\
+
 Los objetivos específicos son:
 \begin{itemize}
-    \item Estudiar la fuerza de torsión en la pala de un aerogenerador
-    \item Encontrar el modelo matemático de las fuerzas
+    \item Estudiar la fuerza de torsión en la pala de un aerogenerador.
+    \item Comparar diferentes formas de torsión y distintos ángulos de cabeceo de la pala evaluando la potencia que producen y la eficiencia que presenta respecto a una pala que solo presenta ángulo de cabeceo.
+    \item Encontrar el modelo matemático de las fuerzas.
 \end{itemize}
 
 \subsection{Estructura de la memoria}
