--- a/biblio.bib
+++ b/biblio.bib
@@ -213,3 +213,22 @@ month = may,
 year = {2021},
 howpublished={\url{https://www.grc.nasa.gov/www/k-12/airplane/liftco.html}}
 }
+
+%https://www.siemensgamesa.com/es-es/products-and-services/offshore/aerogenerador-swt-6-0-154
+
+@MISC{Siemens2022,
+author = {Siemens Gamesa Renewable Energy, S.A.},
+title = {Aerogenerador SWT-6.0-154},
+year = {2022},
+howpublished={\url{https://www.siemensgamesa.com/es-es/products-and-services/offshore/aerogenerador-swt-6-0-154}}
+}
+
+%https://web.archive.org/web/20171113094042/https://www.metoffice.gov.uk/binaries/content/assets/mohippo/pdf/s/j/10_0425_factsheet_6_beaufort.pdf
+
+@MISC{BeaufortScale2012,
+  author={Met Office},
+  title={National Meteorological Library and Archive
+Fact sheet 6 — The Beaufort Scale},
+  year={2012},
+  howpublished={\url{https://web.archive.org/web/20171113094042/https://www.metoffice.gov.uk/binaries/content/assets/mohippo/pdf/s/j/10_0425_factsheet_6_beaufort.pdf}}
+}
