--- a/main.tex
+++ b/main.tex
@@ -26,9 +26,7 @@ innertopmargin=\topskip,
 %\mdtheorem[style=theoremstyle]{definition}{Definición}
 \newtheorem{definicion}{Definición}[section]
 \newtheorem{proposicion}{Proposición}[section]
-
 \newtheorem{propiedad}{Propiedad}[section]
-
 \newtheorem{ejemplo}{Ejemplo}[section]
 
 \begin{document}
@@ -37,7 +35,7 @@ innertopmargin=\topskip,
 \tableofcontents
 \include{basicas/introduccion}
 \include{secciones/desarrollo_teorico}
-
+\include{secciones/Resultados}
 
 
 \include{basicas/conclusiones}
