--- a/secciones/desarrollo_teorico.tex
+++ b/secciones/desarrollo_teorico.tex
@@ -544,12 +544,16 @@ La masa de los segmentos de una pala dada su densidad y volumen:
  \end{equation}
   Donde $ masa \text{ } pala $ es el peso de la aleta de la turbina eólica teniendo en cuenta la porción no rellena de la misma y $ masa \text{ } segmento_i $ es el peso de los segmentos de la aleta.\\
  
+ 
 Se puede pasar a calcular la $densidad \text{ } superficial$ como:
   \begin{equation}
  densidad \text{ } superficial = \dfrac{masa \text{ } pala}{ superficie \text{ } pala} \hspace{7pt} \left(\dfrac{Kg}{m^2}\right)
  \label{def:densidad_superficial}
  \end{equation}
  Donde $ densidad \text{ } superficial $ generalmente se define como masa de un material por unidad de superficie. \\
+ 
+ 
+  \colorbox{orange}{¿Es correcto multiplicarlo por la densidad superficial? Con carlos hablé de thickness, pero está en metros}
  
 Se puede obtener el momento de inercia general o $I_i$ mediante el Teorema \ref{eq:Huygens-Steiner}, como:
   \begin{equation}
